--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,15 @@ body
   background-color: #202020d0;
   color: aliceblue;
 }
+
+.panel-dark 
+{
+  background: #000;
+  color: aliceblue;
+}
+
+.panel-light
+{
+  background-color: darkgrey;
+  color: gold;
+}
