--- a/src/index.css
+++ b/src/index.css
@@ -22,8 +22,8 @@ body
 
 .panel-all-light
 {
-  background-color: #dddddd;
-  color: black;
+  background-color: #dddddd54;
+  color: gold;
 }
 
 .panel-all-dark
